# search-substack-semantically

./: .cursorrules  .gitignore  Dockerfile  main.py  makefile  pyproject.toml  readme.md  requirements.txt  test.py
src/: chat.py  db.py  embed.py  embed_posts.py  models.py  scraping.py  vis.py
src/scraping/: add_categories.py  add_posts.py  add_substacks.py
