[project]
name = "subspace"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominique Paul",email = "dominique.c.a.paul@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fire",
    "qdrant-client",
    "supabase",
    "sqlalchemy",
    "python-dotenv",
    "pandas",
    "tqdm",
    "scrape-substack @ file:///Users/dpaul/Documents/05%20Passion%20Code/scrape-substack",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
scrape-substack = {develop = true}

[tool.poetry]
packages = [
    { include = "src" }
]
